fix: mobile scrollbar in Transfer

--- a/src/components/Wallet/Transfer/Transfer.module.scss
+++ b/src/components/Wallet/Transfer/Transfer.module.scss
@@ -40,7 +40,6 @@
     .wrapper {
         gap: 15px;
         height: auto;
-        overflow-y: auto;
 
         .sell {
             padding: 20px;
